# aurell

./: .env.example  .gitignore  Cargo.toml  README.md  mix.exs
.zed/: tasks.json
assets/css/: app.css
client/: Cargo.toml  input.css  package-lock.json
client/assets/: tailwind.css
client/src/: http_client.rs  main.rs  query.rs  router.rs
client/src/api/: auth.rs
client/src/pages/: authenticate_magic_link.rs  home.rs  magic_link_sent.rs  mod.rs  signin.rs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: aurell.ex  aurell_web.ex
lib/aurell/: accounts.ex  application.ex  mailer.ex  repo.ex
lib/aurell_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_auth.ex
priv/repo/: seeds.exs
server/: Cargo.toml
server/src/: config.rs  main.rs
server/src/features/auth/: mod.rs
server/src/features/auth/handlers/: mod.rs  revoke_session.rs  send_magic_link.rs  signin.rs  verify_magic_link.rs
server/src/features/auth/services/: magic_link_service.rs  mod.rs  session_service.rs
server/src/shared/: mod.rs
server/src/shared/errors/: magic_link_service_errors.rs  mod.rs  session_service_errors.rs
server/src/shared/extractors/: validated_json.rs
server/src/shared/middlewares/: cors_middleware.rs  logger_middleware.rs  mod.rs
server/src/shared/types/: mod.rs  org_type.rs  responses_type.rs
server/src/shared/utils/: mod.rs  request_validator_util.rs  responses_util.rs
shared/: Cargo.toml
shared/src/: commons.rs  lib.rs
spec/: bruno.json
spec/auth/: send magic link.bru  (+2 more)
test/: test_helper.exs
types/: Cargo.toml
(+31 files in other folders)
