[package]
name = "client"
version = "0.1.0"
authors = ["Damien Dumontet <damien.dumontet@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daisy_rsx = "0.1.38"
dioxus = { version = "0.6.0", features = ["router"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
