[package]
name = "aurell-server"
version = "0.1.0"
edition = "2024"

[dependencies]
aurell-types = { path = "../types" }
axum = "0.8.4"
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
stytch = "8.11.0"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
